--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@
 }
 
 body {
-  background: #efefef;
+  background: #cbcaca;
 }
 .container {
   display: flex;
   flex-direction: column;
+  width: 100%;
   height: 100%;
   overflow-y: hidden;
 }
@@ -22,7 +23,30 @@ body {
 }
 .main-content {
   position: -webkit-sticky;
-  margin-left: 100px;
+  margin-left: 130px;
+  flex: 2;
+  flex-basis: 70%;
+  background: #fff;
+  margin-top: 4px;
+  border-radius: 4px;
+}
+
+.right-sidebar {
+  flex: 1;
+  flex-basis: 20%;
+  margin-left: 1.5%;
+  margin-right: 2%;
+  height: 90vh;
+  background: #fff;
+  border-radius: 4px;
+  margin-block: 5px;
+  padding-block: 10px;
+  padding-inline: 25px;
+}
+
+.left-sidebar {
+  flex: 1;
+  flex-basis: 25%;
 }
 
 /* Styles for header part of the page */
@@ -135,7 +159,7 @@ nav {
   top: 0;
   bottom: 0;
   left: 0;
-  background: #fff;
+  background: hsl(0, 3%, 93%);
   overflow: hidden;
   transition: width 0.2s linear;
   box-shadow: width 20px 35px rgba(0, 0, 0, 0.1);
@@ -149,6 +173,9 @@ a {
   width: 300px;
   padding-block: 8px;
   padding-right: 5px;
+}
+nav ul li a:hover {
+  background-color: rgb(227, 225, 225);
 }
 
 li a i {
@@ -179,7 +206,9 @@ li:hover {
 }
 
 nav:hover {
-  width: 240px;
+  width: 350px;
+  border-top-right-radius: 45%;
+  border-bottom-right-radius: 45%;
   transition: all 0.5s ease;
 }
 
@@ -254,6 +283,7 @@ nav:hover {
 }
 
 .logout-cont {
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -266,8 +296,133 @@ nav:hover {
 }
 
 .logout-cont:hover {
+  width: 50%;
   color: white;
   margin-inline: 40px;
   background-color: red;
   transition: all 0.5s ease;
+}
+
+.title-cont {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.title-cont h3 {
+  width: 50%;
+  color: #4e4d4d;
+}
+.title-cont h3:hover {
+  width: 50%;
+  color: black;
+  transition: all 0.5s ease;
+}
+
+.title-cont a {
+  text-align: center;
+  color: #679aec;
+  font-weight: bold;
+  text-align: end;
+}
+.title-cont a:hover {
+  color: #054df5;
+}
+
+.events-list {
+  padding-block: 2px;
+}
+
+.event {
+  padding-inline: 25px;
+  padding-block: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.event-time {
+  text-align: center;
+  width: 70px;
+  height: 65px;
+  box-shadow: 2px 2px 10px rgba(39, 38, 38, 0.961);
+  border-radius: 10px;
+  cursor: pointer;
+  background: hwb(185 1% 44%);
+  margin-left: 10px;
+}
+.event-time:hover {
+  background: #8de9f1;
+  transition: all 0.6s ease;
+}
+
+.event-info {
+  width: 70%;
+}
+
+.event-time h2 {
+  background: white;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.event-time h2:hover {
+  transition: all 0.6s ease;
+}
+.event-time h4 {
+  text-align: center;
+  height: 38px;
+  color: white;
+}
+
+.advert {
+  padding-block: 2px;
+}
+.advert-img-cont {
+  max-width: 100%;
+  height: auto - 10px;
+  text-align: center;
+}
+
+.advert-img-cont a {
+  width: 100%;
+  text-align: center;
+}
+
+.aau-img {
+  width: 100%;
+  height: 200px;
+  border-radius: 2px;
+}
+
+.users {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-bottom: 10px;
+}
+
+.user {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-inline: 30px;
+  padding-block: 5px;
+  width: 100%;
+}
+.user:hover {
+  background: #e9e8e8;
+  border-radius: 10px;
+}
+
+.user-img {
+  width: 30px;
+  height: 30px;
+  margin-right: 10px;
+  border-radius: 100%;
+}
+
+.user-img span {
+  color: #4e4d4d;
+  padding-left: 10px;
+  font-size: smaller;
 }
